--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Zoo News!</title>
          <!-- Font Awesome -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Bootstrap -->
@@ -12,8 +12,12 @@
         <!-- Custom css -->
         <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 
+
 </head>
 <body>
+    {% block nav %}
+        {% include 'nav.html' %}
+    {% endblock %}
     {% block content %}
 
     {% endblock %}
