--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -90,4 +90,35 @@
 
     </div>
     <!-- Card deck -->
+    <!-- Card -->
+    <div class="card card-cascade wider">
+
+        <!-- Card image -->
+        <div class="view view-cascade gradient-card-header peach-gradient">
+
+            <!-- Title -->
+            <h2 class="card-header-title mb-3">News Title</h2>
+            <!-- Text -->
+            <p class="mb-0"><i class="fas fa-calendar mr-2"></i>26.07.2017</p>
+
+        </div>
+
+        <!-- Card content -->
+        <div class="card-body card-body-cascade text-center">
+
+            <!-- Text -->
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex minis
+                recusandae. Facere modi sunt, quod quibusdam dignissimos neque rem nihil ratione est placeat vel, natus
+                non quos laudantium veritatis sequi.Ut enim ad minima veniam, quis nostrum.</p>
+            <!-- Link -->
+            <a href="#!" class="orange-text d-flex flex-row-reverse p-2">
+                <h5 class="waves-effect waves-light">Read more<i class="fas fa-angle-double-right ml-2"></i></h5>
+            </a>
+
+        </div>
+        <!-- Card content -->
+
+    </div>
+    <!-- Card -->
+
 {% endblock %}
