Cleaned up the layout

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Zoo News!</title>
+    {% block styles %}
          <!-- Font Awesome -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Bootstrap -->
@@ -11,7 +12,7 @@
         <link href="{{ url_for('static', filename='css/mdb.min.css') }}" rel="stylesheet">
         <!-- Custom css -->
         <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
-
+    {% endblock %}
 
 </head>
 <body>
@@ -21,18 +22,19 @@
     {% block content %}
 
     {% endblock %}
-    <!-- jQuery -->
-    <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+    {% block scripts %}
+        <!-- jQuery -->
+        <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 
-    <!-- Popper.js -->
-    <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+        <!-- Popper.js -->
+        <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
 
-    <!-- Bootstrap -->
-    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+        <!-- Bootstrap -->
+        <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 
-    <!-- Material Design for Bootstrap -->
-    <script src="{{ url_for('static', filename='js/mdb.min.js') }}"></script>
-
+        <!-- Material Design for Bootstrap -->
+        <script src="{{ url_for('static', filename='js/mdb.min.js') }}"></script>
+    {% endblock %}
 
 </body>
 </html>
