--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,124 +1,20 @@
 {% extends "base.html"%}
+{% import 'news_macros.html' as macro %}
 
 {% block content %}
-    <!-- Card deck -->
-    <div class="card-deck">
 
-        <!-- Card -->
-        <div class="card mb-4">
-
-            <!--Card image-->
-            <div class="view overlay">
-                <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
-                     alt="Card image cap">
-                <a href="#!">
-                    <div class="mask rgba-white-slight"></div>
-                </a>
-            </div>
-
-            <!--Card content-->
-            <div class="card-body">
-
-                <!--Title-->
-                <h4 class="card-title">Card title</h4>
-                <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                    content.</p>
-                <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-                <button type="button" class="btn btn-light-blue btn-md">Read more</button>
-
-            </div>
-
+    <div class="" id="" >
+        <div class="">
+            <h2 class="text-center font-weight-bold headers h1" >General News</h2>
+            {{ macro.show_news_sources(general) }}
+            <h2 class="text-center font-weight-bold headers" >Tech News</h2>
+            {{ macro.show_news_sources(tech) }}
+            <h2 class="text-center font-weight-bold headers" > Business News</h2>
+            {{ macro.show_news_sources(business) }}
+            <h2 class="text-center font-weight-bold headers" > Sports news </h2>
+            {{ macro.show_news_sources(sports) }}
         </div>
-        <!-- Card -->
-
-        <!-- Card -->
-        <div class="card mb-4">
-
-            <!--Card image-->
-            <div class="view overlay">
-                <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/14.jpg"
-                     alt="Card image cap">
-                <a href="#!">
-                    <div class="mask rgba-white-slight"></div>
-                </a>
-            </div>
-
-            <!--Card content-->
-            <div class="card-body">
-
-                <!--Title-->
-                <h4 class="card-title">Card title</h4>
-                <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                    content.</p>
-                <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-                <button type="button" class="btn btn-light-blue btn-md">Read more</button>
-
-            </div>
-
-        </div>
-        <!-- Card -->
-
-        <!-- Card -->
-        <div class="card mb-4">
-
-            <!--Card image-->
-            <div class="view overlay">
-                <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/15.jpg"
-                     alt="Card image cap">
-                <a href="#!">
-                    <div class="mask rgba-white-slight"></div>
-                </a>
-            </div>
-
-            <!--Card content-->
-            <div class="card-body">
-
-                <!--Title-->
-                <h4 class="card-title">Card title</h4>
-                <!--Text-->
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                    content.</p>
-                <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-                <button type="button" class="btn btn-light-blue btn-md">Read more</button>
-
-            </div>
-
-        </div>
-        <!-- Card -->
-
     </div>
-    <!-- Card deck -->
-    <!-- Card -->
-    <div class="card card-cascade wider">
 
-        <!-- Card image -->
-        <div class="view view-cascade gradient-card-header peach-gradient">
-
-            <!-- Title -->
-            <h2 class="card-header-title mb-3">News Title</h2>
-            <!-- Text -->
-            <p class="mb-0"><i class="fas fa-calendar mr-2"></i>26.07.2017</p>
-
-        </div>
-
-        <!-- Card content -->
-        <div class="card-body card-body-cascade text-center">
-
-            <!-- Text -->
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex minis
-                recusandae. Facere modi sunt, quod quibusdam dignissimos neque rem nihil ratione est placeat vel, natus
-                non quos laudantium veritatis sequi.Ut enim ad minima veniam, quis nostrum.</p>
-            <!-- Link -->
-            <a href="#!" class="orange-text d-flex flex-row-reverse p-2">
-                <h5 class="waves-effect waves-light">Read more<i class="fas fa-angle-double-right ml-2"></i></h5>
-            </a>
-
-        </div>
-        <!-- Card content -->
-
-    </div>
-    <!-- Card -->
 
 {% endblock %}
