updated the look and layout of the nav

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -8,8 +8,14 @@ nav {
 h2 {
     padding: 20px;
 }
-.source-card{
+.main-card{
+    padding-left: 1em;
+    padding-right: 1em;
 
+}
+.card{
+    padding-left: 1em;
+    padding-right: 1em;
 }
 #source-name{
     font-family: 'Livvic', sans-serif;
@@ -23,4 +29,7 @@ h2 {
 .desc{
 
     font-size:18px;
+}
+.view {
+    height: 100%;
 }
