--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,8 +1,8 @@
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar aqua-gradient">
     <div class="container">
-        <a class="navbar-brand" href="#">
-            <strong>MDB</strong>
+        <a class="navbar-brand" href="/">
+            <strong>Zoo News</strong>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
                 aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,7 +11,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
+                    <a class="nav-link" href="/">Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
@@ -19,7 +19,7 @@
                     <a class="nav-link" href="#">News Articles</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">News Sources</a>
+                    <a class="nav-link" href="/News-Sources">News Sources</a>
                 </li>
             </ul>
             <form class="form-inline">
