Added code to display all the news sources

--- a/app/templates/news_macros.html
+++ b/app/templates/news_macros.html
@@ -61,3 +61,70 @@
     </div>
 
 {% endmacro %}
+{% macro show_news_sources_article(source_articles) %}
+    <!-- Card deck -->
+    <div class="row main-card card-cascade narrower row-cols-1 row-cols-md-4">
+        {% for article in source_articles %}
+        <!-- Card -->
+        <div class="card col mb-4 ">
+
+            <!--Card image-->
+            <div class="view overlay">
+                <img class="card-img-top" src="{{ article.url_to_image }}"
+                     alt="Card image cap">
+                <a href="#!">
+                    <div class="mask rgba-white-slight"></div>
+                </a>
+            </div>
+
+            <!--Card content-->
+            <div class="card-body">
+
+                <!--Title-->
+                <h4 class="card-title h6">{{ article.title | truncate(50) }}</h4>
+                <!--Text-->
+                <p class="card-text">{{ article.description }}</p>.
+                <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+
+                <p class="disabled">Posted on: {{article.published_at | truncate(13) }} By: {{article.author}} </p>
+                <a class="btn  btn-md rounded-pill blue-gradient" href="{{ article.url }}">Read more</a>
+
+            </div>
+
+        </div>
+        <!-- Card -->
+        {% endfor %}
+
+    </div>
+    <!-- Card deck -->
+
+{% endmacro %}
+{% macro show_all_news_source(list_of_all_sources) %}
+    <table class="table table-striped table-hover table-bordered ">
+        <thead class="young-passion-gradient white-text">
+
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Description</th>
+            <th scope="col">Category</th>
+            <th scope="col"> Country </th>
+            <th scope="col">url</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            {% for source in list_of_all_sources %}
+            <th scope="row">{{ source.id }}</th>
+            <td>{{ source.name }}</td>
+            <td>{{ source.description }}</td>
+            <td>{{ source.category }}</td>
+            <td> {{ source.country }}
+            <td> <a href="{{ source.url}}" class="blue-text underline">{{ source.url }} </a></td>
+
+        </tr>
+        {% endfor %}S
+
+        </tbody>
+    </table>
+{% endmacro %}
