Added code to display articles

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -16,7 +16,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">News Articles</a>
+                    <a class="nav-link" href="/News-Articles">News Articles</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/News-Sources">News Sources</a>
