Added code to search and display articles

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -24,7 +24,8 @@
             </ul>
             <form class="form-inline">
                 <div class="md-form my-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" name="article-query" aria-label="Search">
+                    <button class="btn rounded-pill my-2 my-sm-0 sunny-morning-gradient" type="submit">Search</button>
                 </div>
             </form>
         </div>
