--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,8 @@
         <!-- Custom css -->
         <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     {% endblock %}
+    <link href="{{ url_for('static', filename='images/favicon.ico') }}" rel="shortcut icon">
+
 
 </head>
 <body>
